@@ -1,3 +1,4 @@
+	* fix socks5 support for UDP
 	* add setting urlseed_max_request_bytes to handle large web seed requests
 	* fix python build with CC/CXX environment
 	* add trackers from add_torrent_params/magnet links to separate tiers
